--- a/index.html
+++ b/index.html
@@ -1,62 +1,33 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Un título</title>
-  <!--Acá vamos a meter más metadatos, con la ayuda de https://megatags.co/-->
+  <!-- COMMON TAGS -->
+  <meta charset="utf-8">
+  <title>Pepillo Omega 5000</title>
+  <!-- Search Engine -->
+  <meta name="description" content="Yo soy Pau, y tengo una afición">
+  <meta name="image" content="http://vignette3.wikia.nocookie.net/natsumeyuujinchou/images/f/fd/Madara.png/revision/latest?cb=20160131220312&path-prefix=es">
+  <!-- Schema.org for Google -->
+  <meta itemprop="name" content="Pepillo Omega 5000">
+  <meta itemprop="description" content="Yo soy Pau, y tengo una afición">
+  <meta itemprop="image" content="http://vignette3.wikia.nocookie.net/natsumeyuujinchou/images/f/fd/Madara.png/revision/latest?cb=20160131220312&path-prefix=es">
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Pepillo Omega 5000">
+  <meta name="twitter:description" content="Yo soy Pau, y tengo una afición">
+  <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+  <meta name="og:title" content="Pepillo Omega 5000">
+  <meta name="og:description" content="Yo soy Pau, y tengo una afición">
+  <meta name="og:image" content="http://vignette3.wikia.nocookie.net/natsumeyuujinchou/images/f/fd/Madara.png/revision/latest?cb=20160131220312&path-prefix=es">
+  <meta name="og:url" content="www.pepollos.com">
+  <meta name="og:site_name" content="Pelillos Mágicos">
+  <meta name="og:type" content="website">
+
   <link href="normalize.css" rel="stylesheet">
-  <style>
-    /* por el punto al principio del selector, esta es una regla para una clase de nombre container */
-      .container{padding:1em 2em; margin:0;}
+  <link href="estail.css" rel="stylesheet">
 
-    /* acá defino una regla que se aplica a los elementos header, section, footer */
-      header, section, footer{padding:5px;}
-
-    /* acá defino una relga que se aplica solo al elemento footer, que se agrega a lo definido en la regla anterior */
-      footer{margin-top:2em; border-top:1px solid #ddd; font-size:90%;}
-
-    /* acá defino una regla que se aplica al título de tercer nivel cuando está dentro de section */
-        section h3{margin-top:3em;}
-
-    /* acá defino una regla que se aplica a la imagen cuando está dentro de section */
-      section img{max-width: 100%;}
-
-    /* acá defino una regla que se aplica a la table cuando está dentro de section */
-      section table{border-collapse: collapse; margin-bottom: 1.5em;}
-
-    /* acá defino una regla que se aplica a la thead dentro de la table cuando está dentro de section */
-      section table thead{background:#eee;}
-
-    /* ¿y qué pasa en este caso? */
-      section table td, section table th{
-      	border:1px solid #ccc;
-        padding:10px;
-        margin:0;
-        text-align: left;
-        font-size:90%;
-      }
-
-    /*
-      Cuando pedían permiso de niños,
-      iban su papá y él decía que NO,
-      luego iban con su mamá y ella les decía que SI,
-      entonces SI lo hacían.
-      De la misma forma se comporta CSS,
-      se queda con lo último que le dicen.
-      Eso lo aprovecho acá
-    */
-
-      section table td:first-child, section table th:first-child{
-        text-align: center;
-      }
-
-      section table td:last-child, section table th:last-child{
-        padding-right:40px;
-      }
-
-    </style>
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -68,19 +39,18 @@
   <div class="container">
     <header>
       <h1>Hola mundo!</h1>
-      <h2>Diseño y Nuevos Medios<br>
-      Segunda clase</h2>
+      <h2>Soy un pepillo...<br>
+      Un pepillo muy poderoso</h2>
     </header>
+
     <section>
-      <h3>Este es un título de tercer nivel</h3>
+      <h3>El origen de la raza pepillos</h3>
       <p>En <a href="http://lipsum.com/" target="_blank">lipsum.com</a> podemos obtener la cantidad de caracteres que queramos para un párrafo,
-        varios párrafos, listados, etc. En este caso le pedí 500 bytes: Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        Vestibulum ullamcorper odio at magna ornare, nec elementum enim feugiat. Suspendisse potenti. Suspendisse cursus neque a
-        magna congue pulvinar. Nulla interdum urna eget mauris laoreet rutrum. Proin eu lorem vel tellus mattis dapibus.
-        Proin lacinia orci sit amet iaculis vehicula. Aliquam sit amet euismod risus, sodales scelerisque diam. Nullam urna purus,
-        dictum sed ultricies eu, luctus quis est. Vestibulum arcu nibh, fringilla non posuere.</p>
+        varios párrafos, listados, etc. En este caso le pedí 500 bytes: La historia de los pepillos de remonta a 14.000 millones de años en el pasado, cuando el universo tenìa apenas 3 minutos de vida.
+         Los pepillos forman parte de una de las particulas elementales de la materia y le aportan suavidad y ternura al mundo.</p>
+
       <figure>
-        <img src="http://lorempixel.com/800/400/city/" alt="imagen random de 800 x 600">
+        <img src="images/pepilloguardian.jpg" alt="imagen random de PEPILLOS">
         <figcaption>También existe un "Loren Ipsum de imágenes", se llama <a href="http://lorempixel.com/" target="_blank">lorempixel.com</a></figcaption>
       </figure>
 
@@ -115,7 +85,7 @@
       <th>1</th>
       <td>DE LA HOZ ARMIJO</td>
       <td>JORDANNA DOMINICKE</td>
-      <td><a href="https://jordanna212.github.io/hello-world/">https://jordanna212.github.io/hello-world/</a></td>
+      <td><a href="https://jordanna212.github.io/hello-world/" rel="nofollow" target="blank" title="Pagina en GitHub">https://jordanna212.github.io/hello-world/</a></td>
     </tr>
     <tr>
       <th>2</th>
@@ -178,7 +148,7 @@
 
 </section>
 <footer>
-<p><a href="mailto:tucorreo@uc.cl">Nombre Apellido</a> | 15 de marzo, 2017</p>
+<p><a href="mailto:pcpinto@uc.cl">Paula Pinto</a> | 15 de marzo, 2017</p>
 </footer>
 </div>
 
